{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 75,
  "lineage": "fbe26fe6-9e0c-22dd-34dc-d51ec7fe9f18",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:579772459395:subnet/subnet-094d9d910d1db0b4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.1.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "Subnet-Public : Public Subnet 1"
                ]
              }
            ],
            "id": "subnet-094d9d910d1db0b4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "579772459395",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "Subnet-Public : Public Subnet 1"
            },
            "vpc_id": "vpc-0c3dd0e9adf7a92f6"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014abb20d0561f470",
            "arn": "arn:aws:ec2:ap-southeast-1:579772459395:elastic-ip/eipalloc-014abb20d0561f470",
            "domain": "vpc",
            "id": "eipalloc-014abb20d0561f470",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-54-254-174-198.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.254.174.198",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee8570ce6068995c",
            "arn": "arn:aws:ec2:ap-southeast-1:579772459395:elastic-ip/eipalloc-0ee8570ce6068995c",
            "domain": "vpc",
            "id": "eipalloc-0ee8570ce6068995c",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-251-15-64.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.251.15.64",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-003c463c8207b4dfa",
            "arn": "arn:aws:ec2:ap-southeast-1:579772459395:instance/i-00dca24d0b19940d2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00dca24d0b19940d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d0e25d69cdbe3fcb",
            "private_dns": "ip-10-0-1-55.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d63c59698297f70b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094d9d910d1db0b4c",
            "tags": {
              "Name": "EC2"
            },
            "tags_all": {
              "Name": "EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0da35943a6293a027"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_route_table.public_route_table",
            "aws_route_table_association.public_subnet_asso",
            "aws_security_group.sg_vpc_tf",
            "aws_subnet.aws_public_subnets",
            "aws_vpc.vpc-tf",
            "data.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:579772459395:internet-gateway/igw-0b5a529ff4f3d6b2b",
            "id": "igw-0b5a529ff4f3d6b2b",
            "owner_id": "579772459395",
            "tags": {
              "Name": "IGW: terraform Project"
            },
            "tags_all": {
              "Name": "IGW: terraform Project"
            },
            "vpc_id": "vpc-0c3dd0e9adf7a92f6"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-014abb20d0561f470",
            "association_id": "eipassoc-029904c3f86aadbe3",
            "connectivity_type": "public",
            "id": "nat-009f47f4e855dc4a0",
            "network_interface_id": "eni-0c5e0581005b92307",
            "private_ip": "10.0.3.33",
            "public_ip": "54.254.174.198",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00c027db836ec46a1",
            "tags": {
              "Name": "Private NAT GW: For terraform Project "
            },
            "tags_all": {
              "Name": "Private NAT GW: For terraform Project "
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.aws_private_subnets",
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ee8570ce6068995c",
            "association_id": "eipassoc-0d7806fb236c7cb4b",
            "connectivity_type": "public",
            "id": "nat-027eeaf2cd8e26c4c",
            "network_interface_id": "eni-01d2fc32c4075981e",
            "private_ip": "10.0.4.247",
            "public_ip": "13.251.15.64",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-091ef270f43c687c8",
            "tags": {
              "Name": "Private NAT GW: For terraform Project "
            },
            "tags_all": {
              "Name": "Private NAT GW: For terraform Project "
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.aws_private_subnets",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:579772459395:route-table/rtb-078ad0eb051daa6b8",
            "id": "rtb-078ad0eb051daa6b8",
            "owner_id": "579772459395",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-009f47f4e855dc4a0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT Private: For terraform Project "
            },
            "tags_all": {
              "Name": "RT Private: For terraform Project "
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3dd0e9adf7a92f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.aws_private_subnets",
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:579772459395:route-table/rtb-08aa21d791858c32d",
            "id": "rtb-08aa21d791858c32d",
            "owner_id": "579772459395",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-027eeaf2cd8e26c4c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT Private: For terraform Project "
            },
            "tags_all": {
              "Name": "RT Private: For terraform Project "
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3dd0e9adf7a92f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_subnet.aws_private_subnets",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:579772459395:route-table/rtb-067cd7488dd4fa53c",
            "id": "rtb-067cd7488dd4fa53c",
            "owner_id": "579772459395",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b5a529ff4f3d6b2b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT Public: For terraform Project "
            },
            "tags_all": {
              "Name": "RT Public: For terraform Project "
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3dd0e9adf7a92f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ace8c8e72f15b49",
            "route_table_id": "rtb-078ad0eb051daa6b8",
            "subnet_id": "subnet-00c027db836ec46a1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.aws_private_subnets",
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fcfc2c6a35d715a",
            "route_table_id": "rtb-08aa21d791858c32d",
            "subnet_id": "subnet-091ef270f43c687c8"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.aws_private_subnets",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc48ce56ce517a39",
            "route_table_id": "rtb-067cd7488dd4fa53c",
            "subnet_id": "subnet-094d9d910d1db0b4c"
          },
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.aws_public_subnets",
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3950ab71998f0c3",
            "route_table_id": "rtb-067cd7488dd4fa53c",
            "subnet_id": "subnet-01754fe0de1f968f9"
          },
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.aws_public_subnets",
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_vpc_tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:579772459395:security-group/sg-0da35943a6293a027",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da35943a6293a027",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240528092112831500000001",
            "name_prefix": "terraform-",
            "owner_id": "579772459395",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG : vpc-tf "
            },
            "tags_all": {
              "Name": "SG : vpc-tf "
            },
            "timeouts": null,
            "vpc_id": "vpc-0c3dd0e9adf7a92f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:579772459395:subnet/subnet-00c027db836ec46a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c027db836ec46a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "579772459395",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Private : Private Subnet 1"
            },
            "tags_all": {
              "Name": "Subnet-Private : Private Subnet 1"
            },
            "vpc_id": "vpc-0c3dd0e9adf7a92f6"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:579772459395:subnet/subnet-091ef270f43c687c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091ef270f43c687c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "579772459395",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Private : Private Subnet 2"
            },
            "tags_all": {
              "Name": "Subnet-Private : Private Subnet 2"
            },
            "vpc_id": "vpc-0c3dd0e9adf7a92f6"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:579772459395:subnet/subnet-094d9d910d1db0b4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094d9d910d1db0b4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "579772459395",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Public : Public Subnet 1"
            },
            "tags_all": {
              "Name": "Subnet-Public : Public Subnet 1"
            },
            "vpc_id": "vpc-0c3dd0e9adf7a92f6"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:579772459395:subnet/subnet-01754fe0de1f968f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01754fe0de1f968f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "579772459395",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-Public : Public Subnet 2"
            },
            "tags_all": {
              "Name": "Subnet-Public : Public Subnet 2"
            },
            "vpc_id": "vpc-0c3dd0e9adf7a92f6"
          },
          "dependencies": [
            "aws_vpc.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:579772459395:vpc/vpc-0c3dd0e9adf7a92f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b4bd636c5c5b5a87",
            "default_route_table_id": "rtb-014510cef35d70bb2",
            "default_security_group_id": "sg-000ee20633992c16c",
            "dhcp_options_id": "dopt-0689782347c0eb7f7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c3dd0e9adf7a92f6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-014510cef35d70bb2",
            "owner_id": "579772459395",
            "tags": {
              "Name": "VPC: terraform"
            },
            "tags_all": {
              "Name": "VPC: terraform"
            }
          }
        }
      ]
    }
  ]
}